crates/ditto-checker/tests/golden/type-errors/unification_error_3.ditto
module Test exports (..);

not_five = if "false" then 5 else 4;
